[package]
name = "voj_backend"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^4.0.0-beta.2"
serde=""
serde_json=""
serde_derive=""
anyhow=""
chrono=""
dotenv=""
env_logger=""
log=""
r2d2_postgres=""
r2d2=""
jsonwebtoken = ""
futures=""
futures-util=""
bson="^2.0.0-beta.2"

[dependencies.mongodb]
version="^2.0.0-beta.2"
default-features=false
features=["sync"]
