[package]
name = "voj_backend"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt=""
actix-web={version="^4.0.0-beta.2",features=["openssl"]}
actix-service=""
serde=""
serde_json=""
serde_derive=""
anyhow=""
chrono=""
dotenv=""
env_logger=""
log=""
jsonwebtoken = ""
futures=""
futures-util=""
bson="^2.0.0-beta.2"
openssl = { version = "0.10", features = ["v110"] }
rust-argon2=""
lazy_static=""
tokio=""
actix-cors="0.6.0-beta.2"
actix-web-actors="^4.0.0-beta.6"
actix="0.12.0"
uuid=""

[dependencies.mongodb]
version="^2.0.0-beta.2"


